// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when map type enumeration items have duplicate short descriptions should have validation failure 1`] = `"Descriptor EntityName redeclares item ShortDescription."`;

exports[`when map type enumeration items have duplicate short descriptions should have validation failure 2`] = `
Object {
  "column": 11,
  "line": 8,
  "tokenText": "\\"ShortDescription\\"",
}
`;

exports[`when map type enumeration items have multiple duplicate short descriptions should have multiple validation failure 1`] = `"Descriptor EntityName redeclares item ShortDescription1."`;

exports[`when map type enumeration items have multiple duplicate short descriptions should have multiple validation failure 2`] = `
Object {
  "column": 11,
  "line": 8,
  "tokenText": "\\"ShortDescription1\\"",
}
`;

exports[`when map type enumeration items have multiple duplicate short descriptions should have multiple validation failure 3`] = `"Descriptor EntityName redeclares item ShortDescription2."`;

exports[`when map type enumeration items have multiple duplicate short descriptions should have multiple validation failure 4`] = `
Object {
  "column": 11,
  "line": 14,
  "tokenText": "\\"ShortDescription2\\"",
}
`;
